--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -14,20 +14,19 @@
         android:background="@drawable/border_black"
         app:layout_constraintEnd_toEndOf="parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/button_home"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:src="@drawable/ic_home"
-                android:background="?android:attr/selectableItemBackground"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                android:contentDescription="Home Button"
+                android:background="?android:attr/selectableItemBackground" />
+
 
             <ImageButton
                 android:id="@+id/button_user"
@@ -50,7 +49,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inicio"
+            android:text="Gestión de Tareas"
             android:textSize="40sp"
             android:textStyle="bold"
             android:layout_gravity="center"
@@ -59,13 +58,13 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_gestion_tareas"
+        android:id="@+id/button_add_task"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:textSize="13sp"
-        android:drawableStart="@drawable/ic_task"
+        android:drawableStart="@drawable/ic_add"
         android:background="@drawable/button_background"
-        android:text="Gestión de Tareas"
+        android:text="Agregar Tarea"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="120dp"
@@ -73,33 +72,49 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button_configuracion"
+        android:id="@+id/button_edit_task"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:textSize="13sp"
-        android:text="Configuración"
-        android:drawableStart="@drawable/ic_settings"
+        android:text="Editar Tarea"
+        android:drawableStart="@drawable/ic_edit"
         android:background="@drawable/button_background"
         android:padding="10dp"
         android:layout_marginTop="120dp"
         android:layout_marginRight="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/button_gestion_tareas"
-        app:layout_constraintBottom_toBottomOf="@+id/button_gestion_tareas" />
+        app:layout_constraintRight_toLeftOf="@+id/button_add_task"
+        app:layout_constraintBottom_toBottomOf="@+id/button_add_task" />
 
     <Button
-        android:id="@+id/button_notificaciones"
+        android:id="@+id/button_task_acomplished"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:textSize="13sp"
-        android:text="Notificaciones"
-        android:drawableStart="@drawable/ic_notifications"
+        android:drawableStart="@drawable/ic_complished"
+        android:background="@drawable/button_background"
+        android:text="Marcar Tarea como Hecha"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button_deleted_task"
+        android:layout_width="200dp"
+        android:layout_height="120dp"
+        android:textSize="13sp"
+        android:text="Eliminar Tarea"
+        android:drawableStart="@drawable/ic_delete"
         android:background="@drawable/button_background"
         android:padding="10dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_configuracion" />
+        android:layout_marginTop="250dp"
+        android:layout_marginRight="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button_task_acomplished"
+        app:layout_constraintBottom_toBottomOf="@+id/button_task_acomplished" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
